--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,10 @@ services:
             interval: 10s
             timeout: 5s
             retries: 5
+        networks:
+            - appnet
+
+networks:
+    appnet:
+        external: true
+
